--- a/content/content/lectures/part2/90_architecting_for_scale.md.erb
+++ b/content/content/lectures/part2/90_architecting_for_scale.md.erb
@@ -10,7 +10,7 @@ cat: scale
 
 ##### Ongoing work
 
-* <%= partbadge %> <%= codebadge %> **Complete nt 0.2 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable "Github repo zipped up." %>
+* <%= partbadge %> <%= zipbadge %> **Complete nt 0.2 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable "Github repo zipped up." %>
 
 ##### Useful but not mandatory reading
 * [Open Source Load Testing Tools: Which one should I use?](https://www.blazemeter.com/blog/open-source-load-testing-tools-which-one-should-you-use)
@@ -26,6 +26,7 @@ cat: scale
 * Questions
   * What is an API exactly?
 
+<%= include_topic :thecloud %>
 #### Reviewing the reading
 * <%= link_to_topic :sinatra_series_5 %>
 
