--- a/content/content/lectures/part2/85_cloudarch.md.erb
+++ b/content/content/lectures/part2/85_cloudarch.md.erb
@@ -1,6 +1,6 @@
 ---
-title: Architecture and the Cloud
-desc: We start going in to more complicated core architectures, which will serve as the foundation for nanoTwitter
+title: Service Oriented Architecure and Devops
+desc: We start going in to more complicated core architectures
 homework: 1) Read and respond to article
 cat: nt
 ---
@@ -18,17 +18,38 @@ cat: nt
 * [Types of Cloud Computing](https://aws.amazon.com/types-of-cloud-computing/)
 
 <%= include_topic :sinatra_technology_options %>
+* <%= link_to_section :intro, :tech_presentations %>
 
-<%= include_from_section :intro,  :tech_presentations %>
+#### SOA, APIS, hosts, IP addresses
+* Service Oriented Architectures
+  * Divide a system into "services" that communicate with each other
+  * Services can be implemented by one or multiple "servers"
+  * If more than one, then requests get sent to them based on some algorithm
+* How does this communication work?
+  * Almost always using tcp/ip (which requires an IP address)
+  * Often http but not always (e.g. database servers typically don't use http)
+  * Each service has a way that it expects to be called
+  * This is called its "API"
+* APIs
+  * Almost always there's a software library that encapsulates the API
+  * This is often referred to as the "binding" for that API in a certain programming language
+  * I.e. "Is there a python binding for MongoDB?"
+  * The client uses the binding to call the server
+  * Key parameter is the ip address or dns name of the server
+* Services
+  * These are not public APIs. They are not accessible outside of the internal infrastructure
+  * Still there are APIs and often dns names
+* Clients
+  * How does the client know what dns name or ip address to use?
+  * If there's only one instance ever, it could be put right into the code (MongoDb.open_database("ourdata", "12.32.33.44")
+  * Even that is dangerous. If you need to upgrade or otherwise change your network organized, the ip might change
+* Github or other public repos
+  * Be careful: never put any secret keys from AWS, Twitter, or anyone else in your code
+  * Hackers constantly scan these public repos and find the keys and turn your account into a Bitcoin Mining Operation
+  * Also don't include IP addresses
+  * Many approaches to dealing with this
+  * Simplest is Environment Variables
 
-#### Discussion
-* Any teams choosing to do something interesting beyond the basics?
-* Additional idea for Service Oriented Architecture: Loose coupling
-  * Asynchronous communication
-  * If supplier is down or slow, this doesn't harm the consumer
-  * Using the database as the queue
-
-<%= include_topic :thecloud %>
 <%= include_topic :devops %>
 
 #### Next Class
