--- a/content/content/lectures/part2/90_architecting_for_scale.md.erb
+++ b/content/content/lectures/part2/90_architecting_for_scale.md.erb
@@ -16,6 +16,7 @@ cat: scale
 * [Open Source Load Testing Tools: Which one should I use?](https://www.blazemeter.com/blog/open-source-load-testing-tools-which-one-should-you-use)
 * [Top 5 Performance/Load Testing Tools in 2018](https://www.guru99.com/performance-testing-tools.html)
 
+<%= include_topic :devops %>
 
 #### Discussion
 * Review How to do Authentication in Sinatra (see <%= link_to_topic :nt_outline %>)
