--- a/content/content/lectures/part2/85_cloudarch.md.erb
+++ b/content/content/lectures/part2/85_cloudarch.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Service Oriented Architecure and Devops
+title: Service Oriented Architecure
 desc: We start going in to more complicated core architectures
 homework: 1) Read and respond to article
 cat: nt
@@ -18,9 +18,9 @@ cat: nt
 * [Types of Cloud Computing](https://aws.amazon.com/types-of-cloud-computing/)
 
 #### Discussion
-* Take a look at this active_record example: [AR Example](https://github.com/pitosalas/rails_examples/tree/master/ar_associations)
 
-* <%= include_topic :sinatra_technology_options %>
+* Take a look at this active_record example: [AR Example](https://github.com/pitosalas/rails_examples/tree/master/ar_associations)
+* <%= link_to_topic :sinatra_technology_options %>
 * <%= link_to_section :intro, :tech_presentations %>
 
 #### SOA, APIS, hosts, IP addresses
