--- a/content/content/lectures/part2/90_architecting_for_scale.md.erb
+++ b/content/content/lectures/part2/90_architecting_for_scale.md.erb
@@ -1,12 +1,14 @@
 ---
 title: Introduction to Scale
-desc: What does scalability mean? How is it different from Performance? What do scalbility problems look like?
-homework: 1) Read about Scalability and Design in Sinatra; 2) Complete work on nanoTwitter 0.2
+desc: What does scalability mean? How is it different from Performance? What do scalability problems look like?
+homework: 1) Read about Scalability and Design in Sinatra; 2) Complete Service API - Cloud; 3) Complete work on nanoTwitter 0.2
 cat: scale
 ---
 <%= homework_hdr %>
 
 1. <%= partbadge %> Read and think about <%= link_to_topic :sinatra_series_5 %> and answer the warmup questions that are stated there. <%= deliverable "Pdf with your responses" %>
+
+2. <%= partbadge %> <%= zipbadge %> Read <%= link_to_topic :hw_service_api_0 %> and complete <%= link_to_topic :hw_service_api_1 %> <%= deliverable "Pdf with your responses" %>
 
 ##### Ongoing work
 
@@ -16,7 +18,6 @@ cat: scale
 * [Open Source Load Testing Tools: Which one should I use?](https://www.blazemeter.com/blog/open-source-load-testing-tools-which-one-should-you-use)
 * [Top 5 Performance/Load Testing Tools in 2018](https://www.guru99.com/performance-testing-tools.html)
 
-<%= include_topic :devops %>
 
 #### Discussion
 * Review How to do Authentication in Sinatra (see <%= link_to_topic :nt_outline %>)
