--- a/content/content/lectures/part2/90_architecting_for_scale.md.erb
+++ b/content/content/lectures/part2/90_architecting_for_scale.md.erb
@@ -1,14 +1,13 @@
 ---
 title: Introduction to Scale
-desc: What does scalability mean? How is it different from Performance? What do scalability problems look like?
+desc: What does scalability mean? What do scalability problems look like?
 homework: 1) Read about Scalability and Design in Sinatra; 2) Complete Service API - Cloud; 3) Complete work on nanoTwitter 0.2
 cat: scale
 ---
 <%= homework_hdr %>
 
-1. <%= partbadge %> Read and think about <%= link_to_topic :sinatra_series_5 %> and answer the warmup questions that are stated there. <%= deliverable "Pdf with your responses" %>
-
-2. <%= partbadge %> <%= zipbadge %> Read <%= link_to_topic :hw_service_api_0 %> and complete <%= link_to_topic :hw_service_api_1 %> <%= deliverable "Pdf with your responses" %>
+1. <%= partbadge %> <%= pdfbadge %> Read and think about <%= link_to_topic :sinatra_series_5 %> and answer the warmup questions that are stated there. <%= deliverable "Pdf with your responses" %>
+2. <%= partbadge %> <%= pdfbadge %> Read <%= link_to_topic :hw_service_api_0 %> and complete <%= link_to_topic :hw_service_api_1 %> <%= deliverable "Pdf with your responses" %>
 
 ##### Ongoing work
 
