--- a/content/content/intro/20_tech_presentations.md.erb
+++ b/content/content/intro/20_tech_presentations.md.erb
@@ -9,17 +9,17 @@ Over the next 12 classes each student will give a techical presentation. I will 
 
 <% tbh = TableHelper.new(:normal) %>
 <% tbh.headers("Date", "(Proposed) Presenters", "Topic") %>
-<% tbh.row("?", "?", "NodeJS - with Express, compared to Sinatra") %>
-<% tbh.row("?", "?", "Fat Client Architectures - React") %>
-<% tbh.row("?", "?", "Graph Databases - dgraph Amazon Neptune, Neo4J") %>
-<% tbh.row("?", "?", "NoSQL Databases - MongoDB") %>
-<% tbh.row("?", "?", "Containerizing - Docker") %>
+<% tbh.row("?", "Zekai", "NodeJS - with Express, compared to Sinatra") %>
+<% tbh.row("?", "Daniel", "Fat Client Architectures - React") %>
+<% tbh.row("?", "Matt", "Graph Databases - dgraph Amazon Neptune, Neo4J") %>
+<% tbh.row("?", "Yifei", "NoSQL Databases - MongoDB") %>
+<% tbh.row("?", "Lin", "Containerizing - Docker") %>
+<% tbh.row("?", "Yingdi", "Full Text Search - ElasticSearch")%>
+<% tbh.row("?", "Anyan", "Push Processing and Web Sockets") %>
+<% tbh.row("?", "Meigi", "Alternate ORMs - Sequel gem") %>
+<% tbh.row("?",  "Yifan", "Database Sharding and Paritioning - ActiveRecord v6") %>
 <% tbh.row("?", "?", "Client programming languages - Elm") %>
-<% tbh.row("?", "?", "Full Text Search - ElasticSearch")%>
-<% tbh.row("?", ?", "Push Processing and Web Sockets") %>
 <% tbh.row("?", "?", "API Architectures other than REST - GraphQL") %>
-<% tbh.row("?", "?", "Alternate ORMs - Sequel gem") %>
-<% tbh.row("?",  "?", "Database Sharding and Paritioning - ActiveRecord v6") %>
 <% tbh.row("?", "?", "Global Scaling Architectures") %>
 
 <%= tbh.render %>
