--- a/content/content/lectures/part2/90_architecting_for_scale.md.erb
+++ b/content/content/lectures/part2/90_architecting_for_scale.md.erb
@@ -26,9 +26,11 @@ cat: scale
   * Demonstrate and look at my code
 * Questions
   * What is an API exactly?
+* <%= link_to_section :intro,  :tech_presentations %>
 
 #### Reviewing the reading
 * <%= link_to_topic :sinatra_series_5 %>
+* <%= link_to_topic :devops %>
 
 #### Work in teams
 * Using these principles, propose services for your nano twitter
