--- a/content/content/intro/20_tech_presentations.md.erb
+++ b/content/content/intro/20_tech_presentations.md.erb
@@ -9,18 +9,18 @@ Over the next 12 classes each student will give a techical presentation. I will 
 
 <% tbh = TableHelper.new(:normal) %>
 <% tbh.headers("Date", "(Proposed) Presenters", "Topic") %>
-<% tbh.row("?", "Zekai", "NodeJS - with Express, compared to Sinatra") %>
-<% tbh.row("?", "Daniel", "Fat Client Architectures - React") %>
-<% tbh.row("?", "Matt", "Graph Databases - dgraph Amazon Neptune, Neo4J") %>
-<% tbh.row("?", "Yifei", "NoSQL Databases - MongoDB") %>
-<% tbh.row("?", "Lin", "Containerizing - Docker") %>
-<% tbh.row("?", "Yingdi", "Full Text Search - ElasticSearch")%>
-<% tbh.row("?", "Anyan", "Push Processing and Web Sockets") %>
-<% tbh.row("?", "Meigi", "Alternate ORMs - Sequel gem") %>
-<% tbh.row("?",  "Yifan", "Database Sharding and Paritioning - ActiveRecord v6") %>
+<% tbh.row("Feb 28", "Daniel", "Push Processing and Web Sockets") %>
+<% tbh.row("March 3", "Anyan", "Fat Client Architectures - React") %>
+<% tbh.row("March 6", "Matt", "Graph Databases - dgraph Amazon Neptune, Neo4J") %>
+<% tbh.row("March 10", "Xiaojing", "Database Sharding and Paritioning - ActiveRecord v6") %>
+<% tbh.row("March 13", "Lin", "Containerizing - Docker") %>
+<% tbh.row("March 17", "Yifei", "NoSQL Databases - MongoDB") %>
+<% tbh.row("March 24", "Jingdi", "Full Text Search - ElasticSearch")%>
+<% tbh.row("March 27", "Zekai", "NodeJS - with Express, compared to Sinatra") %>
+<% tbh.row("March 31", "Yifan", "Global Scaling Architectures") %>
+<% tbh.row("?", "?", "Alternate ORMs - Sequel gem") %>
 <% tbh.row("?", "?", "Client programming languages - Elm") %>
 <% tbh.row("?", "?", "API Architectures other than REST - GraphQL") %>
-<% tbh.row("?", "?", "Global Scaling Architectures") %>
 
 <%= tbh.render %>
 
