--- a/content/content/lectures/part2/105_testing_for_scale.md.erb
+++ b/content/content/lectures/part2/105_testing_for_scale.md.erb
@@ -6,6 +6,10 @@ hw: tbd
 ---
 <%= homework_hdr %>
 
+1. <%= pdfbadge %> complete <%= link_to_topic :hw_service_api_3 %> <%= deliverable "Pdf with your responses" %>
+
+<%= include_topic :scaling %>
+
 #### Testing
 * Automated testing
 * Test Frameworks
