--- a/content/content/lectures/part2/100_gs_andy_payne.md.erb
+++ b/content/content/lectures/part2/100_gs_andy_payne.md.erb
@@ -6,11 +6,11 @@ homework: 1) Continue working on nT0.5
 ---
 <%= homework_hdr %>
 
-1. **Teams continue to work on nanoTwitter 0.5**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
+1. <%= pdfbadge %> complete <%= link_to_topic :hw_service_api_2 %> <%= deliverable "Pdf with your responses" %>
 
-#### Technical Presentations
+##### Ongoing work
 
-<%= callout("Presentation", " Fengzhencheng Zeng will present about Containerizing - Docker")%>
+* **Teams continue to work on nanoTwitter 0.5**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 ### Guest Speaker
 
