--- a/content/content/intro/20_tech_presentations.md.erb
+++ b/content/content/intro/20_tech_presentations.md.erb
@@ -3,24 +3,23 @@ title: Tech Presentations
 ---
 #### Tech Presentations
 
-Over the next 12 classes each student will give a techical presentation. I will reserve 30 minutes at the start of each class for the presentation. The topics can be selected from the list below or you can propose new ones. Here are the guidelines
-
 <%= include_topic :tech_pres %>
 
 <% tbh = TableHelper.new(:normal) %>
 <% tbh.headers("Date", "(Proposed) Presenters", "Topic") %>
-<% tbh.row("Feb 28", "Daniel", "Push Processing and Web Sockets") %>
 <% tbh.row("March 3", "Anyan", "Fat Client Architectures - React") %>
-<% tbh.row("March 6", "Matt", "Graph Databases - dgraph Amazon Neptune, Neo4J") %>
+<% tbh.row("March 6", "Daniel", "Push Processing and Web Sockets") %>
 <% tbh.row("March 10", "Xiaojing", "Database Sharding and Paritioning - ActiveRecord v6") %>
 <% tbh.row("March 13", "Lin", "Containerizing - Docker") %>
 <% tbh.row("March 17", "Yifei", "NoSQL Databases - MongoDB") %>
 <% tbh.row("March 24", "Jingdi", "Full Text Search - ElasticSearch")%>
 <% tbh.row("March 27", "Zekai", "NodeJS - with Express, compared to Sinatra") %>
 <% tbh.row("March 31", "Yifan", "Global Scaling Architectures") %>
-<% tbh.row("?", "?", "Alternate ORMs - Sequel gem") %>
+<% tbh.row("April 3", "Matt", "Scalability in Scientific Computing") %>
 <% tbh.row("?", "?", "Client programming languages - Elm") %>
 <% tbh.row("?", "?", "API Architectures other than REST - GraphQL") %>
+<% tbh.row("?", "?", "?") %>
+
 
 <%= tbh.render %>
 
