--- a/content/content/intro/50_links_resources.md.erb
+++ b/content/content/intro/50_links_resources.md.erb
@@ -20,3 +20,4 @@ Here are various resources that will come in handy during this class.
 * [ActiveRecord Basics Guide](https://edgeguides.rubyonrails.org/active_record_basics.html)
 * [ActiveRecord Migration Guide](https://edgeguides.rubyonrails.org/active_record_migrations.html)
 * [Ruby Debugging Cheat Sheet](https://www.schneems.com/2016/01/25/ruby-debugging-magic-cheat-sheet.html)
+* [bcrypt for Ruby](https://github.com/codahale/bcrypt-ruby)
