--- a/content/content/lectures/part2/100_gs_andy_payne.md.erb
+++ b/content/content/lectures/part2/100_gs_andy_payne.md.erb
@@ -17,3 +17,6 @@ homework: 1) Continue working on nT0.5
 <%= include_topic :andy_payne %>
 
 Today he will focus on the technical and architectural aspects of scalability.
+
+#### Next Class
+* Look at homework: <%= link_to_next_lecture %>
