--- a/content/content/lectures/part2/110_testing_soa.md.erb
+++ b/content/content/lectures/part2/110_testing_soa.md.erb
@@ -1,14 +1,9 @@
 ---
-title: Testing for Scalability
-cat: scale
-desc: Unit testing and system testing for scale
+title: Testing in the world of SOA
+desc: Testing, Unit Testing and special cases in SOA
 hw: tbd
+cat: scale
 ---
-<%= homework_hdr %>
-
-1. <%= pdfbadge %> complete <%= link_to_topic :hw_service_api_3 %> <%= deliverable "Pdf with your responses" %>
-
-<%= include_topic :scaling %>
 
 #### Testing
 * Automated testing
@@ -26,5 +21,5 @@ hw: tbd
 <%= include_topic :mocking %>
 <%= include_topic :testing_fixtures %>
 
-#### Details
-
+#### Next Class
+* Look at homework: <%= link_to_next_lecture %>
