--- a/content/content/lectures/part2/110_testing_soa.md.erb
+++ b/content/content/lectures/part2/110_testing_soa.md.erb
@@ -5,6 +5,9 @@ hw: tbd
 cat: scale
 ---
 
+#### Tech Presentations
+<%= callout("Presentation", " Anyan will present about Fat Client architectures - React") %>
+
 #### Testing
 * Automated testing
 * Test Frameworks
