--- a/content/content/lectures/part2/115_web_services.md.erb
+++ b/content/content/lectures/part2/115_web_services.md.erb
@@ -31,7 +31,7 @@ cat: nt
 * **Teams continue to work on nanoTwitter**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 #### Tech Presentations
-<%= callout("Presentation", " Brad will present about NodeJS - with express, compared with Sinatra") %>
+<%= callout("Presentation", " Daniel will present about Push Processing and Web Sockets") %>
 
 <%= include_topic :rest_web_services %>
 
