--- a/content/content/lectures/part3/140_scl_logging.md.erb
+++ b/content/content/lectures/part3/140_scl_logging.md.erb
@@ -12,6 +12,9 @@ cat: scale
 ##### Ongoing work
 * Teams continue to work on nanoTwitter, heading into Nt 1.0!
 
+#### Tech Presentations
+<%= callout("Presentation", " Lin will present about Containerizing - Docker") %>
+
 #### Monitoring, Logging, Reporting
 * Similar, in fact a little hard to tell the difference
 * There are numerous products in this general space
