--- a/content/content/lectures/part3/160_scl_db.md.erb
+++ b/content/content/lectures/part3/160_scl_db.md.erb
@@ -29,7 +29,7 @@ cat: scale
 * **Teams continue to work on nanoTwitter 0.6**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 #### Tech Presentations
-<%= callout("Presentation", " Xiangran Zhao on Full Text Search - ElasticSearch") %>
+<%= callout("Presentation", " Jingdi on Full Text Search - ElasticSearch") %>
 
 #### Notes and Discussion
 * How is nT 0.6 going? Any obstacles or questions?
