--- a/content/content/lectures/part3/170_continued.md.erb
+++ b/content/content/lectures/part3/170_continued.md.erb
@@ -11,5 +11,5 @@ cat: scale
 * **Teams continue to work on nanoTwitter 0.7**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 #### Tech Presentation
-<%= callout("Presentation", " Yang Shang, API Architectures other than REST - GraphQL") %>
+<%= callout("Presentation", " Yifan will present a technical talk about Global Scaling Architectures") %>
 
