--- a/content/content/lectures/part3/130_scaling_twitter.md.erb
+++ b/content/content/lectures/part3/130_scaling_twitter.md.erb
@@ -20,7 +20,7 @@ cat: scale
 * <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 0.3 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Tech Presentations
-<%= callout("Presentation", " Liaman will present about Fat Client architectures - React") %>
+<%= callout("Presentation", " Xiaojing will present about Database Sharding and Paritioning - ActiveRecord v6") %>
 
 #### General Notes on Review of nt0.x
 * There should be a test/ directory with tests written prefarably in Minitest although RSpec is ok too
