--- a/content/content/intro/20_tech_presentations.md.erb
+++ b/content/content/intro/20_tech_presentations.md.erb
@@ -14,7 +14,7 @@ In the coming weeks each student will be asked to research, prepare and present 
 <% tbh.headers("Date", "(Proposed) Presenters", "Topic") %>
 <% tbh.row("March 3", "Anyan", "Fat Client Architectures - React") %>
 <% tbh.row("March 6", "Daniel", "Push Processing and Web Sockets") %>
-<% tbh.row("March 10", "Xiaojing", "Database Sharding and Paritioning - ActiveRecord v6") %>
+<% tbh.row("March 10", "Xiaojing", "API Architectures other than REST - GraphQL") %>
 <% tbh.row("March 13", "Lin", "Containerizing - Docker") %>
 <% tbh.row("March 17", "Yifei", "NoSQL Databases - MongoDB") %>
 <% tbh.row("March 24", "Jingdi", "Full Text Search - ElasticSearch")%>
@@ -22,7 +22,7 @@ In the coming weeks each student will be asked to research, prepare and present 
 <% tbh.row("March 31", "Yifan", "Global Scaling Architectures") %>
 <% tbh.row("April 3", "Matt", "Scalability in Scientific Computing") %>
 <% tbh.row("?", "?", "Client programming languages - Elm") %>
-<% tbh.row("?", "?", "API Architectures other than REST - GraphQL") %>
+<% tbh.row("?", "?", "Database Sharding and Paritioning - ActiveRecord v6") %>
 <% tbh.row("?", "?", "Kubernetes") %>
 <% tbh.row("?", "?", "") %>
 <%= tbh.render %>
