--- a/content/content/lectures/part2/110_testing_soa.md.erb
+++ b/content/content/lectures/part2/110_testing_soa.md.erb
@@ -1,24 +1,28 @@
 ---
 title: Testing in the world of SOA
 desc: Testing, Unit Testing and special cases in SOA
-hw: tbd
+hw: none
 cat: scale
 ---
+<%= homework_hdr %>
+
+* Nothing for today. **Start looking at Thursday's deliverables!**
+
+##### Ongoing work
+* **Teams continue to work on nanoTwitter**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
+
+##### Useful but not mandatory reading
+* This paper describes a popular view which I don't necessarily agree with but is important to know about: [The 3 Tenets of Service Objects in Ruby](https://hackernoon.com/the-3-tenets-of-service-objects-c936b891b3c2) 
 
 #### Tech Presentations
 <%= callout("Presentation", " Anyan will present about Fat Client architectures - React") %>
 
-#### Testing
-* Automated testing
-* Test Frameworks
-* Unit testing
-* Integration testing
-
-#### Pitfalls
+#### Testing in the world of SOA
 * Scaling architectures can actually create very difficult bugs
 * Concurrent software is the most difficult kind to reason about
+* So we will discuss that first
+* It's an extension of testing in general
 
-#### Basics 
 <%= include_topic :testing_concepts %>
 <%= include_topic :testing_pyramid %>
 <%= include_topic :mocking %>
