--- a/content/content/lectures/part2/110_testing_soa.md.erb
+++ b/content/content/lectures/part2/110_testing_soa.md.erb
@@ -12,21 +12,22 @@ cat: scale
 * **Teams continue to work on nanoTwitter**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 ##### Useful but not mandatory reading
-* This paper describes a popular view which I don't necessarily agree with but is important to know about: [The 3 Tenets of Service Objects in Ruby](https://hackernoon.com/the-3-tenets-of-service-objects-c936b891b3c2) 
+* There is a lot of debated around Service objects. This is one up to date view: [3 Tenets of Service Objects in Ruby](https://hackernoon.com/the-3-tenets-of-service-objects-c936b891b3c2) 
+* Let's review some of the options in [Minitest Quick Reference](http://mattsears.com/articles/2011/12/10/minitest-quick-reference)
+* A recent simple set of three tutorials: [MiniTest, writing test code in Ruby](https://dev.to/exampro/minitest-writing-test-code-in-ruby-part-2-of-3-4306)
+
 
 #### Tech Presentations
 <%= callout("Presentation", " Anyan will present about Fat Client architectures - React") %>
 
 #### Testing in the world of SOA
-* Scaling architectures can actually create very difficult bugs
-* Concurrent software is the most difficult kind to reason about
-* So we will discuss that first
-* It's an extension of testing in general
-
-<%= include_topic :testing_concepts %>
-<%= include_topic :testing_pyramid %>
-<%= include_topic :mocking %>
-<%= include_topic :testing_fixtures %>
+* <%= link_to_topic :testing_intro %>
+* <%= link_to_topic :testing_reasons %>
+* <%= link_to_topic :money_class_test_example %>
+* <%= link_to_topic :testing_services %>
+* <%= link_to_topic :testing_pyramid %>
+* <%= link_to_topic :mocking %>
+* <%= link_to_topic :testing_data %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
