Add CI/CD instructions

--- a/content/content/lectures/part2/115_web_services.md.erb
+++ b/content/content/lectures/part2/115_web_services.md.erb
@@ -1,7 +1,7 @@
 ---
 title: nanoTwitter and REST APIs
 desc: How to think about Web Services API designs and documentation
-homework: 2) Read about REST and respond to warmups; 2) Based on reading about routes in nanoTwitter, submit API documentation; 3) Continue work on nT 0.3
+homework: 1) Read about REST and respond to warmups; 2) Move your nanoTwitter from Heroku to DigitalOcean
 cat: nt
 ---
 <%= homework_hdr %>
@@ -12,12 +12,13 @@ cat: nt
     * In the context of REST APIs, what is pagination? Why would you say that pagination is a concern, and can you give some scenarios where it becomes a concern?
     * Please mention one or two concepts or topics from this reading that you didn't follow or would like to learn more about.
     * <%= deliverable "Respond to the warmups in Latte." %>
-1. <%= teambadge %> Move your nanoTwitter (so far) from Heroku to Digital Ocean. Some of you might never have gotten onto Heroku yet. Or you may already have moved to Digital Ocean. Either case is fine. This is an experiment before I update the instructions to use Digital Ocean for future students. Here's what you need to do:
+2. <%= teambadge %> Move your nanoTwitter (so far) from Heroku to DigitalOcean. Some of you might never have gotten onto Heroku yet. Or you may already have moved to DigitalOcean. Either case is fine. This is an experiment before I update the instructions to use DigitalOcean for future students. Here's what you need to do:
     * Create two droplets for nanoTwitter in your project: 1) nT "front end", 2) nT "microservice TBD"
     * Clone the repo(s) to these two droplets. Note that even though you would have distinct sets of code for each, you can still have them both in the same repo, just with different "launch" programs (i.e. either app_frontend.rb or app_microservice.rb)
     * Create a postgres database cluster
-    * Using all you learned from the recent series of homeworks, configure your nanoTwitter as an automatically started systemctl service
-    * Connect all the "wires" by putting the right IP addresses in the right place
+    * Using all you learned from the recent series of homeworks, configure your nanoTwitter as an automatically started systemctl service. Hint: <%= link_to_topic :hw_service_api_2 %>
+    * Connect all the "wires" by putting the right IP addresses in the right place.
+    * Configure a Github Actions CI/CD pipeline in your team's repo so that it auto deploys on new changes. Hint: <%= link_to_topic :hw_service_api_3 %>
     * <%= deliverable "Demonstrate the droplet structure of your new setup by making a screen recording of you demoing how things are setup through the Digital Ocean UI" %>
 
 
