--- a/content/content/lectures/part2/115_web_services.md.erb
+++ b/content/content/lectures/part2/115_web_services.md.erb
@@ -13,7 +13,7 @@ cat: nt
     * Please mention one or two concepts or topics from this reading that you didn't follow or would like to learn more about.
     * <%= deliverable "Respond to the warmups in Latte." %>
 2. <%= teambadge %> Move your nanoTwitter (so far) from Heroku to DigitalOcean. Some of you might never have gotten onto Heroku yet. Or you may already have moved to DigitalOcean. Either case is fine. This is an experiment before I update the instructions to use DigitalOcean for future students. Here's what you need to do:
-    * Create two droplets for nanoTwitter in your project: 1) nT "front end", 2) nT "microservice TBD"
+    * Create three droplets for nanoTwitter in your project: 1) nT "front end", 2) nT "Back End" and 3) nT "microservice TBD"
     * Clone the repo(s) to these two droplets. Note that even though you would have distinct sets of code for each, you can still have them both in the same repo, just with different "launch" programs (i.e. either app_frontend.rb or app_microservice.rb)
     * Create a postgres database cluster
     * Using all you learned from the recent series of homeworks, configure your nanoTwitter as an automatically started systemctl service. Hint: <%= link_to_topic :hw_service_api_2 %>
