--- a/content/content/lectures/part3/130_scaling_twitter.md.erb
+++ b/content/content/lectures/part3/130_scaling_twitter.md.erb
@@ -19,15 +19,17 @@ cat: scale
 
 * <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 0.3 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
-#### Tech Presentations
+##### Tech Presentations
 <%= callout("Presentation", " Xiaojing will present about Database Sharding and Paritioning - ActiveRecord v6") %>
 
-#### General Notes on Review of nt0.x
+#### Today: General Notes on Review of nt0.x
 * There should be a test/ directory with tests written prefarably in Minitest although RSpec is ok too
 * We will try and run your test, so make sure your readme gives instructions if they are anything other than `rake test`
 * Remember the change history in your Readme with team members' contribution, who worked on what. 
+* We are continuing for a little bit longer on the previous two lectures.
+* Exercise: Write a test script for a class that is designed to take care of the parsing of a tweet, and extracting #hashtages, @mentions, and anything els
 
-#### What does scaling mean for nanoTwitter?
+##### What does scaling mean for nanoTwitter?
 * What kinds of activities will likely demonstrate a scale problem?
 * Why would each of these possibly challenge scalability?
   * Display of the logged in page
