--- a/content/content/lectures/part3/140_scl_logging.md.erb
+++ b/content/content/lectures/part3/140_scl_logging.md.erb
@@ -12,6 +12,12 @@ cat: scale
 ##### Ongoing work
 * Teams continue to work on nanoTwitter, heading into Nt 1.0!
 
+#### Today
+* We're all on Zoom! Where are you in the world?
+* Is this time slot workable for you or not? Do you have connectivity? Lecture? Lab?
+* For homeworks that are we due or are due on 3/10, 3/12, 3/17 and 3/19 there will be no deadlines
+* How do you want to conduct the course going forward?
+
 #### Tech Presentations
 <%= callout("Presentation", " Lin will present about Containerizing - Docker") %>
 
@@ -21,9 +27,6 @@ cat: scale
 * Sometimes choosing one is tricky because of partial overlap
 * NewRelic is very well known in this space
 * PaperTrail is less well known
-
-
-#### Basics about logging
 
 ##### General
 * Across languages more or less standard conventions have appeared
@@ -59,6 +62,10 @@ cat: scale
 2019-04-04T18:17:44.386413+00:00 heroku[router]: at=info method=GET path="/" host=psnano.herokuapp.com request_id=9ddd467c-2595-47b5-82d9-85f3aa226fef fwd="129.64.120.217" dyno=web.1 connect=0ms service=389ms status=200 bytes=10412 protocol=https
 <%= code_end %>
 
+##### Digital Ocean Logging?
+* Papertrail?
+
+
 ##### What to log
 * Using log levels, I tend to put in lots of "info" level tracing log entries
   * These will eventually cause performance problems
@@ -74,9 +81,6 @@ cat: scale
   * Best practice is key=value pairs
 * Performance
 * Log everything, all the time?
-
-#### Monitoring - Application Performance (APM)
-* https://www.channele2e.com/software/apm/apm-infrastructure-monitoring-converge/
 
 #### Things to do
 * [3 Ways to detect slow queries in Postgres](https://www.cybertec-postgresql.com/en/3-ways-to-detect-slow-queries-in-postgresql/)
