--- a/content/content/lectures/part3/140_scl_logging.md.erb
+++ b/content/content/lectures/part3/140_scl_logging.md.erb
@@ -17,7 +17,13 @@ cat: scale
 * Is this time slot workable for you or not? Do you have connectivity? Lecture? Lab?
 * For homeworks that are we due or are due on 3/10, 3/12, 3/17 and 3/19 there will be no deadlines
 * How do you want to conduct the course going forward?
-
+* Let me review the overall architecture of nT, how buttons work, how forms work
+* Prepare for a 1 hour meeting next week with Julian and Pito demonstrating:
+  * Login/Logout
+  * Ability to Tweet
+  * Ability to Follow
+  * Display tweets of people you are following
+  
 #### Tech Presentations
 <%= callout("Presentation", " Lin will present about Containerizing - Docker") %>
 
