--- a/content/content/lectures/part3/140_scl_logging.md.erb
+++ b/content/content/lectures/part3/140_scl_logging.md.erb
@@ -25,7 +25,7 @@ cat: scale
   * Display tweets of people you are following
   
 #### Tech Presentations
-<%= callout("Presentation", " Lin will present about Containerizing - Docker") %>
+<%= callout("Presentation", " Yifei will present about NoSQL Databases - MongoDB") %>
 
 #### Monitoring, Logging, Reporting
 * Similar, in fact a little hard to tell the difference
