tweaks for todays class

--- a/content/content/lectures/part3/160_scl_db.md.erb
+++ b/content/content/lectures/part3/160_scl_db.md.erb
@@ -26,11 +26,12 @@ cat: scale
 #### Tech Presentations
 <%= callout("Presentation", " Jingdi on Full Text Search - ElasticSearch") %>
 
-#### Notes and Discussion
-* How is nT 0.6 going? Any obstacles or questions?
+#### Today
+* Please delete (right now) any droplet you are not using
 * What to do if "there's not a lot of coding for me to do?!"
+  * See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage
   * How is your test coverage?
-  * How is your API? Is it tested?
+  * Have you tried running loader.io? (next week!)
   * How can you go "beyond the minimum?"
 
 <%= include_topic :scaling_db_tuning %>
