--- a/content/content/lectures/part3/130_scl_testing.md.erb
+++ b/content/content/lectures/part3/130_scl_testing.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Approach to testing scalability
+title: "Testing Scalability"
 desc: How to approach the analysis of scaling, in particular for nanoTwitter
 homework: 1) 1) Read article and watch video, submit answers to warmup questions on Latte; 2) Complete work on nT 0.3
 desc: We begin examining how we would measure and detect scaling problems in nanoTwitter
