--- a/content/content/lectures/part3/135_scl_tuning.md.erb
+++ b/content/content/lectures/part3/135_scl_tuning.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Measuring and tuning for Scale
+title: "Tuning for Scale"
 homework: 1) Read and think about two Twitter scaling articles, capture what you learned in a diagram and answers to some hard questions; 2) Continue work on nT 0.4
 desc: What are some of the key ways in which a system can fail to scale?
 cat: scale
