--- a/content/content/lectures/part3/140_scl_logging.md.erb
+++ b/content/content/lectures/part3/140_scl_logging.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Scaling Pattern: Logging"
+title: "Logging"
 desc: Consider the role of system wide logging 
 homework: 1) 
 cat: scale
