--- a/content/content/lectures/part3/150_scl_cache.md.erb
+++ b/content/content/lectures/part3/150_scl_cache.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Scaling Patterns: Caching"
+title: "Caching"
 desc: Caching is one of the first, simplest ways of attacking scale
 homework: 1) Complete nT 0.4
 cat: scale
