--- a/content/content/lectures/part3/160_scl_db.md.erb
+++ b/content/content/lectures/part3/160_scl_db.md.erb
@@ -1,6 +1,6 @@
 ---
-title: "Scaling Patterns: DB Tuning"
-desc: Look into how database architecture will affect performance and scale and how to improve it.
+title: "Database Tuning 1"
+desc: How database architecture affects performance and scale and how to improve it.
 homework: 1) Database partitioning, warmups; 2) Read articles; 3) Continue work on nT 0.6
 cat: scale
 ---
