--- a/content/content/lectures/part3/165_scl_concur.md.erb
+++ b/content/content/lectures/part3/165_scl_concur.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Scaling Patterns: Concurrency"
+title: "Concurrency"
 desc: "Scaling pattern: Concurrency, Background processing and asynchronous processing"
 homework: 1) Complete nT 0.6; 2) Read article closely, answer warmup questions
 cat: scale
@@ -24,7 +24,7 @@ cat: scale
 * <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 0.6 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Tech Presentation
-<%= callout("Presentation", " Zekai Fan	NodeJS - with Express, compared to Sinatra") %>
+<%= callout("Presentation", " Yifan Leng - Kubernetes") %>
 
 <%= include_topic :scaling_concur %>
 <%= include_topic :scaling_async %>
