--- a/content/content/lectures/part3/168_scl_containers.md.erb
+++ b/content/content/lectures/part3/168_scl_containers.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Scaling Patterns: Concurrency and Thread Safety"
+title: "Concurrency and Thread Safety"
 desc: Continuing the discussion on this critical aspect of scaling 
 homework: 1) Self and Peer Assessments
 cat: scale
