--- a/content/content/lectures/part3/175_scl_queues.md.erb
+++ b/content/content/lectures/part3/175_scl_queues.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Scaling Patterns: Queueing"
+title: "Queueing"
 homework: 1) Read articles and respond to warmup questions; 2) Continue working on nT 0.7
 desc: Centrality of queuing and message passing concepts in achieving scalable architecture
 cat: scale
@@ -23,7 +23,7 @@ cat: scale
 * <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 0.7 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Tech Presentation
-<%= callout("Presentation", " Matt will presentat a techncal talk on Scalability in Scientific Computing") %>
+<%= callout("Presentation", " Matt will present a techncal talk on Scalability in Scientific Computing") %>
 
 ### Scalability Pattern: Queueing
 
