--- a/content/content/lectures/part3/180_scl_soa.md.erb
+++ b/content/content/lectures/part3/180_scl_soa.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Scaling Pattern: SOA + µservices"
+title: "SOA + µservices"
 desc: Look at applications of microservices and SOA in building scalable systems. Consider risks and benefits.
 homework: 1) Read Parnas Paper; 2) Read Microservices Article and respond to warmups; 3) Complete nT0.7
 cat: scale
@@ -29,9 +29,8 @@ cat: scale
 ##### Ongoing work
 * **Teams continue to work on nanoTwitter 0.8**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
-
-##### Tech Presentation
-<%= callout("Tech Pres",  " Ari Carr	Database Sharding and Paritioning - ActiveRecord v6" ) %>
+#### Today
+* 
 
 #### Review of Scalability Runoff
 * Link to the rules and process for <%= link_to_topic :scalability_runoff %> 
