--- a/content/content/lectures/part3/162_scl_db_2.md.erb
+++ b/content/content/lectures/part3/162_scl_db_2.md.erb
@@ -6,10 +6,10 @@ cat: scale
 ---
 <%= homework_hdr %>
 
-1. <%= pdfbadge %> **Preliminary Load Testing**: Read this closely: <%= link_to_topic :nt_load_testing %>. For this assignment you will need to begin the process of load testing according to the link above. Here are the required steps:
+1. <%= pdfbadge %> <%= teambadge %> **Preliminary Load Testing**: Read this closely: <%= link_to_topic :nt_load_testing %>. For this assignment you will need to begin the process of load testing according to the link above. Here are the required steps:
     * Implement `GET /test/reset?user_count=u` from <%= link_to_topic :nt_test_interface %>
     * Run it to load 1000 users, their tweets and follows
-    * Get a free account and configure your nTwitter for loader.io
+    * Get a free account on Loader.io, and configure your nTwitter for loader.io
     * Load test your simple home page `GET /user_id=123` (using a real user_id) with loads of 10, 100 and 250 concurrent users
     * Write up a short report with summary of the test results including at least one graph
     * <%= deliverable "pdf of the report of how well your nanotwitter scaled" %>
